Fix: Icon List - Resolved an alignment issue of Icon and list has due to the line height.

--- a/src/blocks/icon-list/style.scss
+++ b/src/blocks/icon-list/style.scss
@@ -20,7 +20,7 @@
 	box-shadow: none;
 
 	span.uagb-icon-list__source-wrap {
-		display: block;
+		display: flex;
 		align-items: center;
 	}
 }
